--- a/web.config
+++ b/web.config
@@ -21,16 +21,20 @@
         <validation validateIntegratedModeConfiguration="false" />
         <rewrite>
             <rules>
-                {% for directory in site.redirect_directories %}
-                <rule name="redirect-{{ directory.path | replace: '/', '-' }}" enabled="true">
-                    <match ignoreCase="false" url="^{{ directory.path }}/?$" />
-                    <conditions logicalGrouping="MatchAll">
-                        <add input="{REQUEST_FILENAME}.html" matchType="IsFile" negate="true" />
+                <rule name="Redirecting .html ext" enabled="true">
+					<match url="^(.*)[.]html"/>
+					<conditions logicalGrouping="MatchAny">
+						<add input="{URL}" pattern="(.*)[.]html"/>
+					</conditions>
+					<action type="Redirect" url="{ToLower:{R:1}}"/>
+				</rule>
+                <rule name="Hide .html ext">
+                    <match ignoreCase="true" url="^(.*)"/>
+                    <conditions>
+                        <add input="{REQUEST_FILENAME}.html" matchType="IsFile"/>
                     </conditions>
-                    <action type="Redirect" url="{{ directory.url }}" redirectType="Permanent" />
+                    <action type="Rewrite" url="{R:0}.html"/>
                 </rule>
-                {% endfor %}
-                
 				<rule name="index" enabled="true" stopProcessing="true">
                     <match ignoreCase="false" url="^$" />
                     <action type="Redirect" url="introduction" />
