--- a/web.config
+++ b/web.config
@@ -21,6 +21,13 @@
         <validation validateIntegratedModeConfiguration="false" />
         <rewrite>
             <rules>
+                <rule name="Redirect to https" stopProcessing="true">
+                    <match url=".*" />
+                    <conditions>
+                        <add input="{HTTPS}" pattern="off" ignoreCase="true" />
+                    </conditions>
+                    <action type="Redirect" url="https://{HTTP_HOST}{REQUEST_URI}" redirectType="Permanent" appendQueryString="false" />
+                </rule>
                 <rule name="Redirecting .html ext" enabled="true">
 					<match url="^(.*)[.]html"/>
 					<conditions logicalGrouping="MatchAny">
