chore: Updating product title

--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ navigation:
         position: 1
 
 ## Product title
-product: "Progress Telerik Fiddler"
+product: "Progress Telerik Fiddler Everywhere"
 platform: fiddler-everywhere 
 
 ## The application virtual path
