--- a/_config.yml
+++ b/_config.yml
@@ -6,33 +6,33 @@ exclude: [README.md, Gemfile, Gemfile.lock]
 exclude_navigation: ["knowledge-base/*"]
 ## List your directory names and order here, like this:
 navigation:
-    knowledge-base:
-        title: Knowledge Base
+    installation:
+        title: Installation
         position: 10
-    getting-started:
-        title: Getting Started
-        position: 1
     user-guide:
         title: User Guide
-        position: 2
+        position: 20
     user-guide/settings:
         title: Settings
-        position: 0
+        position: 10
     user-guide/settings/general:
         title: General
-        position: 0
+        position: 10
     user-guide/settings/https:
         title: HTTPS
-        position: 1
+        position: 20
     user-guide/settings/connections:
         title: Connections
-        position: 2
+        position: 30
     user-guide/settings/gateway:
         title: Gateway
-        position: 3
+        position: 40
     user-guide/toolbar:
         title: Toolbar
-        position: 1
+        position: 20
+    knowledge-base:
+        title: Knowledge Base
+        position: 100
 
 ## Product title
 product: "Progress Telerik Fiddler Everywhere"
