docs: remove 'Web Sessions List' in favor of `Live Traffic`

--- a/_config.yml
+++ b/_config.yml
@@ -34,7 +34,7 @@ navigation:
         title: Live traffic
         position: 220
     user-guide/live-traffic/web-sessions:
-        title: Web Sessions
+        title: Live Traffic
         position: 2210
     user-guide/live-traffic/inspectors:
         title: Inspectors
