--- a/_config.yml
+++ b/_config.yml
@@ -74,7 +74,7 @@ footer:
 -
   title: "Community"
   links:
-    "Forums": https://www.telerik.com/forums/fiddler
+    "Forums": https://community.getfiddler.com/support/discussions
     "Blogs": https://www.telerik.com/blogs/tag/fiddler
     "Feedback Portal": https://feedback.telerik.com/fiddler-everywhere
   
