--- a/web.config
+++ b/web.config
@@ -20,7 +20,7 @@
     <system.webServer>
         <validation validateIntegratedModeConfiguration="false" />
         <rewrite>
-            <!-- <rewriteMaps configSource="redirect.config" /> -->
+            <rewriteMaps configSource="redirect.config" />
             <rules>
                 <rule name="Redirect to https" stopProcessing="true">
                     <match url=".*" />
