--- a/web.config
+++ b/web.config
@@ -20,8 +20,10 @@
     <system.webServer>
         <validation validateIntegratedModeConfiguration="false" />
         <rewrite>
-            <rewriteMaps configSource="redirect.config" />
             <rules>
+                {% for page in site.redirect_pages %} {% for redirect in page.previous_url %}
+                <rule name="redirect-page-{{ redirect | remove_first: '/' | replace: '/', '-' }}" enabled="true" stopProcessing="true"><match ignoreCase="false" url="^{{ redirect | remove_first: '/' }}$" /><action type="Redirect" url="{{ page.url | remove_first: '/' | replace: '.html', '' }}" /></rule>
+                {% endfor %}{% endfor %}
                 <rule name="Redirect to https" stopProcessing="true">
                     <match url=".*" />
                     <conditions>
