--- a/release-notes/release-notes-insiders.json
+++ b/release-notes/release-notes-insiders.json
@@ -1,6 +1,6 @@
 [
     {
-        "version": "1.5.0",
+        "version": "1.5.0-insiders",
         "title": "Fiddler Everywhere v1.5.0",
         "date": "January 21, 2021",
         "items": [
