--- a/release-notes/release-notes-insiders.json
+++ b/release-notes/release-notes-insiders.json
@@ -1,5 +1,20 @@
 [
     {
+        "version": "1.5.1-insiders",
+        "title": "Fiddler Everywhere v1.5.1",
+        "date": "February 1, 2021",
+        "items": [
+            {
+                "type": "Fixed",
+                "entries": [
+                    {
+                        "title": "High memory usage during sharing"
+                    }
+                ]
+            }
+        ]
+    },
+    {
         "version": "1.5.0-insiders",
         "title": "Fiddler Everywhere v1.5.0",
         "date": "January 21, 2021",
