update privacy section

--- a/_config.yml
+++ b/_config.yml
@@ -29,6 +29,11 @@ navigation:
 product: "Progress Telerik Fiddler Everywhere"
 platform: fiddler-everywhere 
 
+## An experimental property to resolve the SEO vs STA panels conflicts discussed in the following issue: https://github.com/telerik/docs-seed/issues/159
+## Use only with docs-seed branch #fiddler-page-title
+page_title_product: "Fiddler Everywhere"
+use_product_in_title: true
+
 ## The application virtual path
 baseurl: /fiddler-everywhere
 
