--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,14 @@
+
+.DS_Store
+.asset-cache/
 .bundle/
 .dockerignore
-.DS_Store
 .editorconfig
 .jekyll-metadata
 .ruby-version
 /_assets/
+/_build/
+/_buildApi/
 /_common/root/
 /_data/
 /_includes/
@@ -15,20 +19,20 @@
 /favicon.ico
 /fonts/
 /styles/
+Dockerfile
+Gemfile
+Gemfile.lock
 _site
+_tempconfig.yml
 bs-config.js
 build-docs.sh
 copy_content.sh
 copy_local.sh
-Dockerfile
-Gemfile
-Gemfile.lock
 install-npm.sh
 knowledge-base.html
+modify-config.sh
 robots.txt
 search.html
 start-docs.sh
-watch.sh
 to_delete.md
-
-.asset-cache/
+watch.sh
