--- a/release-notes/release-notes-insiders.json
+++ b/release-notes/release-notes-insiders.json
@@ -1,6 +1,6 @@
 [
     {
-        "version": "2.0.2",
+        "version": "2.0.2-insiders",
         "title": "Fiddler Everywhere v2.0.2",
         "date": "July 26, 2021",
         "items": [
